# hackathon_gen_ai_kemenkeu

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  app.py  ca_aiven.pem  chat_handler.py  config.py  eval_handler.py  fly.toml  helper.py  maker_handler.py  model.py  pyproject.toml  user_handler.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/lib/: Header.svelte  top.js
frontend/src/routes/: +page.server.js  +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/chat/[slug]/: +page.server.js  +page.svelte
frontend/src/routes/eval/: +page.server.js  +page.svelte
frontend/src/routes/maker/: +layout.svelte  +page.server.js  +page.svelte  stores.js
frontend/src/routes/maker/create/: +page.server.js  +page.svelte
frontend/src/routes/maker/create/[slug]/: +page.svelte
frontend/src/routes/maker/draft_pdf/[slug]/: +page.server.js  +page.svelte
frontend/src/routes/maker/draft_pptx/[slug]/: +page.svelte
frontend/src/routes/maker/success/: +page.svelte
